Created a function where I used .map and .filter to add even numbers from an array once they were multiplied by 3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Odin Project Practice</title>
   </head>
   <body>
+    <button id="btn">Click Me!</button>
     <script src="./script.js"></script>
   </body>
 </html>
