Practiced making tables in hmtl

--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>The Odin Project Practice</title>
   </head>
   <body>
+    <table>
+      <thead>
+        <th>Purchase</th>
+        <th>Location</th>
+        <th>Date</th>
+        <th>Evaluation</th>
+        <th>Cost</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Haircut</td>
+          <td>Hairdresser</td>
+          <td>12/09</td>
+          <td>Great Idea</td>
+          <td>30</td>
+        </tr>
+
+        <tr>
+          <td>Lasagna</td>
+          <td>Restaurant</td>
+          <td>12/09</td>
+          <td>Regrets</td>
+          <td>18</td>
+        </tr>
+
+        <tr>
+          <td>Shoes</td>
+          <td>Shoeshop</td>
+          <td>13/09</td>
+          <td>Big Regrets</td>
+          <td>65</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="4">Sum</td>
+          <td>113</td>
+        </tr>
+      </tfoot>
+    </table>
     <button id="btn">Click Me!</button>
     <script src="./script.js"></script>
   </body>
